Fix navbar on iPhone SE

--- a/src/main.css
+++ b/src/main.css
@@ -83,6 +83,8 @@ a:focus {
     color: darkgray;
     line-height: 20px;
     padding-top: 50px;
+    padding-left: 12px;
+    padding-right: 12px;
     height: 80px;
 }
 
